Rename Token class to AuthResponse
