# src/main/resources/openapi/openapi.yaml
@@ -56,7 +56,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Token'
+                $ref: '#/components/schemas/AuthResponse'
         default:
           $ref: '#/components/responses/UnexpectedError'
 
@@ -79,7 +79,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Token'
+                $ref: '#/components/schemas/AuthResponse'
         default:
           $ref: '#/components/responses/UnexpectedError'
 
@@ -92,7 +92,7 @@ components:
 
   schemas:
 
-    Token:
+    AuthResponse:
       type: object
       properties:
         issuedAt:
